apps/app-proxy/overlays/aws-local-runtime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: aws-local-runtime-cap-app-proxy
  namespace: aws-local-runtime
spec:
  ingressClassName: nginx
  rules:
  - host: philipp.hybrid-team.cf-cd.com
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy/
        pathType: Prefix
status:
  loadBalancer: {}
